Update authors and groups in index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1>Арабский Халифат</h1>
             <p style="font-size: 1.4rem; color: var(--white);">Великая империя Востока</p>
             <div style="margin-top: 50px; border: 2px solid var(--gold); padding: 20px 40px; background: rgba(6, 78, 59, 0.4);">
-                <b>Автор:</b> Абен Алан<br><b>Группа:</b> ПО-12
+                <b>Сделано:</b> Абен Алан, Воложанин Остап<br><b>Группа:</b> ПО-12, ПЖ-12
             </div>
         </section>
 
@@ -55,8 +55,7 @@
             <div class="content-box" style="text-align: center;">
                 <p>Халифат оставил глубокий след в истории, создав фундамент современной науки и объединив миллионы людей единой культурой.</p>
                 <div style="margin-top: 30px; font-size: 1.4rem; color: var(--gold); border-top: 1px solid var(--gold); padding-top: 15px;">
-                    <b>Выполнил:</b> Абен Алан <br> Группа ПО-12
-                </div>
+                    <b>Выполнили:</b> Абен Алан, Воложанин Остап<br>Группа: ПО-12, ПЖ-12              </div>
             </div>
         </section>
     </div>
